# mlops_mnist

./: LICENSE  Makefile  README.md  data.dvc  models.dvc  pyproject.toml  requirements.txt
.dvc/: config
dockerfiles/: trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/: __init__.py  train_model.py
src/data/: make_dataset.py
src/mlops_mnist/: eval_model.py  train_model.py
src/mlops_mnist/data/: make_dataset.py
src/mlops_mnist/models/: model.py
